@@ -2,7 +2,7 @@ $def with (version, system_id,system_name,user, project, url, statuscode,statusm
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet type="text/xsl" href="$url/static/interface.xsl"?>
 <clam version="$version" id="$system_id" name="$system_name" project="$project" user="$user">
-     $if not conffile:
+     $if not datafile:
         <status code="$statuscode" message="$statusmessage" errors="$errors" errormsg="$errormsg" />
      $if statuscode == 0 or statuscode == 2 or datafile:
         <parameters>
